--- a/jinstagram/pom.xml
+++ b/jinstagram/pom.xml
@@ -1,27 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-  <modelVersion>4.0.0</modelVersion>
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>org.jinstagram</groupId>
+	<artifactId>jInstagram</artifactId>
+	<name>jInstagram</name>
+	<version>1.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
+	<description>Java Instagram API by sachin-handiekar</description>
 
-  <scm>
-    <connection>scm:git:git@github.com/sachin-handiekar/jInstagram.git</connection>
-    <developerConnection>scm:git:git@github.com:sachin-handiekar/jInstagram.git</developerConnection>
-  </scm>
+	<developers>
+		<developer>
+			<id>sachin-handiekar</id>
+			<name>Sachin Handiekar</name>
+			<email>sachin.handiekar@gmail.com</email>
+		</developer>
+	</developers>
 
-  <groupId>org.jinstagram</groupId>
-  <artifactId>jInstagram</artifactId>
-  <name>jInstagram</name>
-  <version>1.0.1-SNAPSHOT</version>
-  <packaging>jar</packaging>
-  <description>Java Instagram API by sachin-handiekar</description>
-  
-  <dependencies>
+	<licenses>
+		<license>
+			<name>MIT</name>
+			<url>http://github.com/sachin-handiekar/jInstagram/blob/master/LICENSE.txt</url>
+		</license>
+	</licenses>
 
-    <dependency>
-      <groupId>com.google.code.gson</groupId>
-      <artifactId>gson</artifactId>
-      <version>2.1</version>
-    </dependency>
- 
-  </dependencies>
+	<scm>
+		<connection>scm:git:git@github.com/sachin-handiekar/jInstagram.git</connection>
+		<developerConnection>scm:git:git@github.com:sachin-handiekar/jInstagram.git</developerConnection>
+	</scm>
+
+
+
+	<dependencies>
+
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.1</version>
+		</dependency>
+
+	</dependencies>
 </project>
