--- a/jInstagram/pom.xml
+++ b/jInstagram/pom.xml
@@ -35,6 +35,13 @@
 			<artifactId>gson</artifactId>
 			<version>2.1</version>
 		</dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.1</version>
+        </dependency>
+
 	</dependencies>
 
 	<build>
