--- a/jInstagram/pom.xml
+++ b/jInstagram/pom.xml
@@ -10,7 +10,7 @@
 	<groupId>com.sachinhandiekar</groupId>
 	<artifactId>jInstagram</artifactId>
 	<name>jInstagram</name>
-	<version>1.0.1</version>
+	<version>1.0.2-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<description>Java Instagram API by sachin-handiekar</description>
 
