--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,9 @@
 	<groupId>com.sachinhandiekar</groupId>
 	<artifactId>jInstagram</artifactId>
 	<name>jInstagram</name>
-	<version>1.0.2-SNAPSHOT</version>
+	<version>1.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
-	<description>Java Instagram API by sachin-handiekar</description>
+	<description>Java Instagram API by Sachin Handiekar</description>
 
 	<developers>
 		<developer>
