--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,10 @@
 		</developer>
 	</developers>
 
+        <properties>
+            <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        </properties>
+
 	<licenses>
 		<license>
 			<name>MIT</name>
@@ -38,7 +42,7 @@
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
-			<version>2.1</version>
+			<version>2.2.2</version>
 		</dependency>
 
 		<dependency>
