--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,18 @@
 					<target>1.6</target>
 				</configuration>
 			</plugin>
+			<plugin>
+			  <groupId>org.apache.maven.plugins</groupId>
+			  <artifactId>maven-javadoc-plugin</artifactId>
+			  <executions>
+				<execution>
+					<id>attach-javadocs</id>
+					<goals>
+						<goal>jar</goal>
+					</goals>
+				</execution>
+			  </executions>
+		    </plugin>
 		</plugins>
 	</build>
 	<profiles>
