--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: java
 install: mvn clean install
 after_success:
+- mvn cobertura:cobertura coveralls:report
 - echo "<settings><servers><server><id>ossrh</id><username>\${env.OSSRH_USER}</username><password>\${env.OSSRH_PASS}</password></server></servers></settings>"
   > ~/settings.xml
 - if [ -z ${TRAVIS_TAG} ]; then mvn deploy --settings ~/settings.xml; fi
