--- a/pom.xml
+++ b/pom.xml
@@ -158,7 +158,7 @@
                 <artifactId>coveralls-maven-plugin</artifactId>
                 <version>3.2.0</version>
                 <configuration>
-                    <repoToken>${env.coveralls_repo_token}</repoToken>
+                    <repoToken>${coveralls_repo_token}</repoToken>
                 </configuration>
             </plugin>
 
