--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ sudo: false
 cache:
   directories:
     - '$HOME/.m2/repository'
+before_script:
+  - pip install --user codecov
 language: java
 install: mvn clean install
 after_success:
