--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,12 @@ addons:
     build_command_prepend: "mvn clean"
     build_command:   "mvn -DskipTests=true compile"
     branch_pattern: master
+
+notifications:
+  webhooks:
+    urls:
+      - https://webhooks.gitter.im/e/ce6869e746cdba7bdee0
+    on_success: change  # options: [always|never|change] default: always
+    on_failure: always  # options: [always|never|change] default: always
+    on_start: never     # options: [always|never|change] default: always
+
