--- a/pom.xml
+++ b/pom.xml
@@ -24,13 +24,13 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <slf4j-api.version>1.7.5</slf4j-api.version>
-        <log4j.version>1.2.17</log4j.version>
-        <junit.version>4.11</junit.version>
-        <gson.version>2.2.2</gson.version>
-        <commons.lang3.version>3.1</commons.lang3.version>
-        <commons.codec.version>1.8</commons.codec.version>
-        <mockito.version>1.8.4</mockito.version>
+        <slf4j-api.version>1.7.21</slf4j-api.version>
+        <log4j.version>2.7</log4j.version>
+        <junit.version>4.12</junit.version>
+        <gson.version>2.7</gson.version>
+        <commons.lang3.version>3.4</commons.lang3.version>
+        <commons.codec.version>1.10</commons.codec.version>
+        <mockito.core.version>2.2.0</mockito.core.version>
         <maven-gpg-plugin.version>1.4</maven-gpg-plugin.version>
         <maven-compiler-plugin.java.source.version>1.6</maven-compiler-plugin.java.source.version>
         <maven-compiler-plugin.java.target.version>1.6</maven-compiler-plugin.java.target.version>
@@ -88,10 +88,14 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
             <version>${log4j.version}</version>
-            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>${log4j.version}</version>
         </dependency>
 
         <dependency>
@@ -103,8 +107,8 @@
 
         <dependency>
             <groupId>org.mockito</groupId>
-            <artifactId>mockito-all</artifactId>
-            <version>${mockito.version}</version>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito.core.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
