--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
         <commons.lang3.version>3.4</commons.lang3.version>
         <commons.codec.version>1.10</commons.codec.version>
         <logback.version>1.1.7</logback.version>
-        <mockito.core.version>2.2.0</mockito.core.version>
+        <mockito.core.version>1.10.19</mockito.core.version>
         <maven-gpg-plugin.version>1.4</maven-gpg-plugin.version>
         <maven-compiler-plugin.java.source.version>1.6</maven-compiler-plugin.java.source.version>
         <maven-compiler-plugin.java.target.version>1.6</maven-compiler-plugin.java.target.version>
@@ -92,6 +92,19 @@
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>${logback.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.powermock</groupId>
+            <artifactId>powermock-api-mockito</artifactId>
+            <version>1.6.6</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.powermock</groupId>
+            <artifactId>powermock-module-junit4</artifactId>
+            <version>1.6.6</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
