--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <groupId>com.sachinhandiekar</groupId>
     <artifactId>jInstagram</artifactId>
     <name>jInstagram</name>
-    <version>1.1.9</version>
+    <version>1.2.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <description>Java Instagram API by Sachin Handiekar</description>
 
